--- a/Project2/.settings/org.eclipse.wst.common.component
+++ b/Project2/.settings/org.eclipse.wst.common.component
@@ -11,7 +11,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
                 
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
                 
         <property name="java-output-path" value="/Project2/target/classes"/>
                 
